--- a/long_read_qc/01-Long_read_QC.Rmd
+++ b/long_read_qc/01-Long_read_QC.Rmd
@@ -38,14 +38,14 @@ knitr::write_bib(c(
 knitr::opts_chunk$set(class.source="Rchunk") 
 ```
 
-```{r, fig.align = 'center',out.width= '30%', echo=FALSE }
-knitr::include_graphics(path = "figures/NEOF.png", auto_pdf = TRUE)
-``` 
+<center>
+![](figures/NEOF.png){style="width:200px; border-radius:15px; border:5px solid #333333; background:null"}
+</center>
 
 # Overview
-```{r, fig.align = 'center',out.width= '20%', echo=FALSE }
-knitr::include_graphics(path = "figures/well.png", auto_pdf = TRUE)
-``` 
+<center>
+![](figures/well.png){style="width:200px"}
+</center>
 
 The most popular long read sequencers are produced by ONT and PacBio.
 It is beneficial to understand how they work and their error profiles to fully utilise the data they produce.
@@ -72,7 +72,7 @@ At the end of this course learners will be able to:
 column_1 <- c(
   #1 Data intro
   '[**Data intro**](#data)', 
- '[![](figures/Play.png){height="150"}](#data)',
+ '[![](figures/Play.png){style="height:150px; border-radius:15px; border:5px solid #333333"}](#data)',
  #3 ONT setup
     '[**ONT setup**](#ontsetupchap)', 
  '[![](figures/conda.png){height="150"}](#ontsetupchap)',
@@ -81,21 +81,21 @@ column_1 <- c(
  '[![](figures/nanoplot_hexes.png){height="150"}](#nanoplotchap)',
  #7 ONT final check
    '[**ONT final check**](#ontcheckchap)', 
- '[![](figures/finish.png){height="150"}](#ontcheckchap)',
+ '[![](figures/finish.png){style="height:150px; border-radius:15px; border:5px solid #333333; background:white"}](#ontcheckchap)',
   #9 CLR setup
    '[**CLR setup**](#clrsetupchap)', 
- '[![](figures/clr.png){height="100"}](#clrsetupchap)',
+ '[![](figures/clr.png){style="height:100px; border-radius:15px; border:5px solid #333333"}](#clrsetupchap)',
    #11 CLR filter
    '[**CLR filtering**](#clrfiltchap)', 
  '[![](figures/quality_filtering.png){height="150"}](#clrfiltchap)',
     #13 appendix
    '[**Appendix**](#mamba_install)', 
- '[![](figures/mamba_logo.png){height="150"}](#mamba_install)'
+ '[![](figures/mamba_logo.png){style="height:150px; border-radius:15px; border:5px solid #333333"}](#mamba_install)'
 )
 column_2 <- c(
   #2 ONT
   '[**ONT background**](#ont)', 
- '[![](figures/ONT_logo_wo_text.png){height="150"}](#ont)',
+ '[![](figures/ONT_logo_wo_text.png){style="height:150px; border-radius:15px; border:5px solid #333333"}](#ont)',
  #4 porechop
    '[**Porechop**](#porechopchap)', 
  '[![](figures/porechop_logo_knife.png){height="100"}](#porechopchap)',
@@ -104,13 +104,13 @@ column_2 <- c(
  '[![](figures/quality_filtering.png){height="150"}](#nanofiltchap)',
  #8 pb background
    '[**PacBio background**](#pb)', 
- '[![](figures/logo_PacBio_web_RGB-1.png){height="150"}](#pb)',
+ '[![](figures/logo_PacBio_web_RGB-1.png){style="height:150px; border-radius:15px; border:5px solid #333333; background:white"}](#pb)',
    #10 CLR qc
    '[**CLR QC**](#clrqcchap)', 
  '[![](figures/qc_inspection.png){height="150"}](#clrqcchap)',
     #12 CCS
-   '[**CLR QC**](#ccschap)', 
- '[![](figures/ccs.png){height="150"}](#ccschap)',
+   '[**CCS**](#ccschap)', 
+ '[![](figures/ccs.png){style="height:150px; border-radius:15px; border:5px solid #333333"}](#ccschap)',
  #14 empty
  "",""
 )
