--- a/long_read_qc/02-Intro.Rmd
+++ b/long_read_qc/02-Intro.Rmd
@@ -1,7 +1,7 @@
 # Data {#data}
-```{r, fig.align = 'center',out.width= '20%', echo=FALSE }
-knitr::include_graphics(path = "figures/Play.png", auto_pdf = TRUE)
-``` 
+<center>
+![](figures/Play.png){style="width:200px; border-radius:15px; border:5px solid #333333; background:null"}
+</center>
 
 ## The data
 
