--- a/long_read_qc/10-PB_background.Rmd
+++ b/long_read_qc/10-PB_background.Rmd
@@ -1,17 +1,16 @@
 # (PART\*) PacBio {.unnumbered}
 
 # PacBio Background {#pb}
-
-```{r, fig.align = 'center',out.width= '40%', echo=FALSE }
-knitr::include_graphics(path = "figures/logo_PacBio_web_RGB-1.png", auto_pdf = TRUE)
-``` 
+<center>
+![](figures/logo_PacBio_web_RGB-1.png){style="width:400px; border-radius:15px; border:5px solid #333333; background:white"}
+</center>
 
 In this section we will quality check PacBio sequencing raw data (BAM files), perform a filter to retain only the longest reads and output the data in fastq format.
 
 ## File formats
-```{r, fig.align = 'center',out.width= '15%', echo=FALSE }
-knitr::include_graphics(path = "figures/files.png", auto_pdf = TRUE)
-``` 
+<center>
+![](figures/files.png){style="width:150px"}
+</center>
 
 Sequence data from PacBio are output as subreads in unaligned BAM format. (Further explanation of the BAM format is in section 3.1.3).
 
@@ -21,9 +20,9 @@ The figure below shows a schematic of a circular DNA molecule of a PacBio librar
 - Red, B = Barcodes, optional single (Left or Right) or double (Left & Right) for multiplexing samples
 - Green, A = Adapter, SMRTbell adapters with a double-stranded stem and single-stranded hairpin loop.
 
-```{r, fig.align = 'center',out.width= '90%', echo=FALSE }
-knitr::include_graphics(path = "figures/smrtbell.png", auto_pdf = TRUE)
-``` 
+<center>
+![](figures/smrtbell.png){style="width:900px; border-radius:15px; border:5px solid #333333; background:null"}
+</center>
 
 Sequencing follows the direction of the arrows and continues around until either the end of the sequencing run or if the DNA polymerase fails.
 
@@ -31,9 +30,9 @@ PacBio sequencing takes place in Zero-Mode Waveguides (ZMWs) on a sequencing cel
 
 A ZMW read consists of the data collected from a single ZMW, with the HQ (high quality) region recorded when just a single molecule of DNA is present in the ZMW.
 
-```{r, fig.align = 'center',out.width= '90%', echo=FALSE }
-knitr::include_graphics(path = "figures/zmw.png", auto_pdf = TRUE)
-``` 
+<center>
+![](figures/zmw.png){style="width:900px; border-radius:15px; border:5px solid #333333; background:null"}
+</center>
 
 This schematic shows the structure of a ZMW read in linear format. Insert DNA subreads are interspersed with the barcode and adapter sequence of the SMRTbell library.
 For more information see: https://pacbiofileformats.readthedocs.io/en/10.0/Primer.html
@@ -49,9 +48,9 @@ This contains the adapter (green) and barcode (red) sequences, as well as any lo
 These BAM files will usually have an accompanying PacBio BAM index file (subreads.bam.pbi and scraps.bam.pbi).
 
 ## CLR & CCS
-```{r, fig.align = 'center',out.width= '80%', echo=FALSE }
-knitr::include_graphics(path = "figures/clr_and_ccs.png", auto_pdf = TRUE)
-``` 
+<center>
+![](figures/clr_and_ccs.png){style="width:800px; border-radius:15px; border:5px solid #333333; background:null"}
+</center>
 
 PacBio data can be generated in two ways depending on the goal of the experiment.
 
@@ -62,9 +61,9 @@ PacBio data can be generated in two ways depending on the goal of the experiment
 For this tutorial we will carry out quality checking and control on both CLR and CCS BAM files.
 
 ## Tools
-```{r, fig.align = 'center',out.width= '15%', echo=FALSE }
-knitr::include_graphics(path = "figures/toolbox.png", auto_pdf = TRUE)
-``` 
+<center>
+![](figures/toolbox.png){style="width:200px"}
+</center>
 
 ### SequelTools
 
