--- a/long_read_qc/13-PB_CLR_filtering.Rmd
+++ b/long_read_qc/13-PB_CLR_filtering.Rmd
@@ -1,14 +1,14 @@
 # CLR filtering {#clrfiltchap}
-```{r, fig.align = 'center',out.width= '10%', echo=FALSE }
-knitr::include_graphics(path = "figures/quality_filtering.png", auto_pdf = TRUE)
-``` 
+<center>
+![](figures/quality_filtering.png){style="width:150px"}
+</center>
 
 Our quality check of the PacBio data doesn\'t include any assessment of sequence quality. Unaligned PacBio data doesn\'t have a quality score in the same way as the Illumina data we looked at on Tuesday. Quality scores for PacBio are generated when the reads are aligned - either to a reference sequence or subreads aligned to each other to generate CCS reads. However, it is often a good idea to use only the longest PacBio reads for a _de novo_ assembly.
 
 ## CLR filtering: run
-```{r, fig.align = 'center',out.width= '15%', echo=FALSE }
-knitr::include_graphics(path = "figures/enter_key_purple.png", auto_pdf = TRUE)
-```
+<center>
+![](figures/enter_key_purple.png){style="width:150px"}
+</center>
 
 To filter the data by minimum CLR length we will use `SequelTools` with the `-t F` option. This sets the task mode to filtering.
 
@@ -41,9 +41,9 @@ __Parameters__:
 - `-o`: Name of an output folder for the filtered data files.
 
 ## Quality check filtered data
-```{r, fig.align = 'center',out.width= '15%', echo=FALSE }
-knitr::include_graphics(path = "figures/qc_inspection.png", auto_pdf = TRUE)
-``` 
+<center>
+![](figures/qc_inspection.png){style="width:150px"}
+</center>
 
 When this has finished running the \'filtered\' folder will contain filtered BAM files for all three samples. Move into this folder using `cd`:
 ```{bash eval=FALSE}
@@ -85,9 +85,9 @@ filt_QC/Sample3_flt.readLenHists.pdf
 For this sample the DNA fragment length of the library was much greater than 10,000 bp, and so the majority of CLRs consist of just one pass of this long insert. The large number of short subreads remaining in the filtered file (blue bars) represent subreads only partially sequenced on the \'return journey\' of the circular library DNA molecule. These are not present when we look only at the longest subread present in each CLR (green bars).
 
 ## BAM to fastq
-```{r, fig.align = 'center',out.width= '15%', echo=FALSE }
-knitr::include_graphics(path = "figures/convert.png", auto_pdf = TRUE)
-``` 
+<center>
+![](figures/convert.png){style="width:200px; border-radius:90px; border:3px solid #333333; background:white"}
+</center>
 
 `SequelTools` doesn\'t have an option for filtering subreads by length. To do this we can convert the filtered BAM file to a fastq or fasta file and use another downstream tool. The fastq file will not contain any useful information on sequence quality (every base is assigned a quality character of \'!\' which is equal to zero), but this file format is useful if only fastq format is accepted as input for a downstream tool.
 
@@ -110,8 +110,8 @@ __Note__: You may see a long warning message ending with \"No such file or direc
 You will now have a compressed fastq file for the CLR-filtered subreads from Sample1. You can also carry this out for Sample2 & Sample3 but it is not required.
 
 ## CLR filtering: summary
-```{r, fig.align = 'center',out.width= '15%', echo=FALSE }
-knitr::include_graphics(path = "figures/sum_purple.png", auto_pdf = TRUE)
-```
+<center>
+![](figures/sum_purple.png){style="width:150px"}
+</center>
 
 We have quality checked and quality controlled our CLR data. This has produced both filtered CLRs and filtered subreads. Next we will learn how to QC CCS data.
